--- a/human-materialcertificate/src/main/webapp/bootstrap/materialcertificateForm.html
+++ b/human-materialcertificate/src/main/webapp/bootstrap/materialcertificateForm.html
@@ -32,41 +32,45 @@
 
 
       <div class="dropdown">
-         <span>
+        Product type field:
                   <select class="readable_value">
                     <option value="Makrolon">Makrolon</option>
                     <option value="Lexan">Lexan</option>
-                    <option value="Default_value" selected>Product type field</option>
+                    <option value="Default_value" selected>choose type field</option>
                   </select>
-
-            <input type="text" placeholder="Order number" required class="readable_value">
           </span>
       </div>
       <br>
 
+      Order number: <input type="text" required class="readable_value" style="margin-left: 20px;">
 
+      <br>
+      <br>
       <div>
-
-        <select class="readable_value">
+      Method field:
+        <span style="margin-left: 30px;">
+        <select class="readable_value" style="width: 125px;">
           <option value="ISO 1133">ISO 1133</option>
-          <option value="Default_value" selected >Method field</option>
+          <option value="Default_value" selected >Choose field</option>
         </select>
+        </span>
+        <br>
+        <br>
 
+        Average:<input type="number" step="any"class="readable_value" style="margin-left: 58px;">
 
-        <input type="number" step="any" placeholder="Average" class="readable_value" style="margin-left: 27px;">
+        <br>
+        <br>
+        Min value: <input type="number" step="any"class="readable_value" style="margin-left: 45px;">
 
-        <input type="number" step="any" placeholder="Min value" class="readable_value">
-
-        <input type="number" step="any" placeholder="Max value" class="readable_value">
+        <br>
+        <br>
+        Max value: <input type="number" step="any"class="readable_value" style="margin-left: 40px;">
 
       </div>
     </div>
     <button id="submit" type="submit">Submit</button>
-    <span>Show last submitted form?
-      <select class="readable_value">
-      <option value="true">true</option>
-      <option value="false" selected >false</option>
-    </select>
+
   </div>
 
   </div>
