--- a/human-productionplan/src/main/webapp/productionPlan.html
+++ b/human-productionplan/src/main/webapp/productionPlan.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<!DOCTYPE HTML>
+<html>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,71 +15,132 @@
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-  <div class="container">
-    <h3>Material change form</h3>
-  </div>
-</head>
+</head><!--from  ww w .  ja  v a 2  s . c o m-->
 <body>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
 
-<form id="Human_form">
-  <div class="container">
-    <div class="well" id="field-root">
+<div class="container">
+  <h3>Production plan form</h3>
+  <div class="well">
+
+    <table class="table table-bordered">
 
 
-      <div class="dropdown">
-        <input type="number" step="any" placeholder="Machine ID" class="readable_value">
+      <thead>
+      <tr class="info">
+        <th></th>
+        <th>I izmena</th>
+        <th>II izmena</th>
+        <th>III izmena</th>
+        <th>I izmena</th>
+      </tr>
+      </thead>
 
-        <select class="readable_value">
-          <option value="Makrolon">Makrolon</option>
-          <option value="Lexan">Lexan</option>
-          <option value="Default_value" selected>Product type field</option>
-        </select>
+      <tbody>
 
-      </div>
-      <br>
+      <tr>
+        <td id="1-0" style="background-color: red">KM 1000/1
+          <br>
+          61282649/001</td>
 
-    </div>
-    <button id="submit" type="submit">Submit</button>
+        <td id="1-1">
+          <div class="dropdown">
+            <select class="readable_value">
+              <option value="Makrolon">X82</option>
+              <option value="Lexan">Delta 3</option>
+              <option value="Makrolon">HFE</option>
+              <option value="Lexan">Nova Insignia</option>
+              <option value="Makrolon">Corsa 1</option>
+              <option value="Lexan">Delta 1</option>
+              <option value="Default_value" selected>Select type</option>
+            </select>
+            Time: <input type="time" class="readable_value" style="height: 20px; width: 80px;">
+          </div>
 
+          <div class="dropdown">
+            <select class="readable_value">
+              <option value="Makrolon">X82</option>
+              <option value="Lexan">Delta 3</option>
+              <option value="Makrolon">HFE</option>
+              <option value="Lexan">Nova Insignia</option>
+              <option value="Makrolon">Corsa 1</option>
+              <option value="Lexan">Delta 1</option>
+              <option value="Default_value" selected>Select type</option>
+            </select>
+            Time: <input type="time" class="readable_value" style="height: 20px; width: 80px;">
+          </div></td>
+
+        <td id="1-2"></td>
+        <td id="1-3"></td>
+        <td id="1-4"></td>
+
+      </tr>
+
+      <tr>
+        <td id="2-0" style="background-color: orange">KM 1000/2
+          <br>
+          61282634/001</td>
+
+        <td id="2-1"></td>
+        <td id="2-2"></td>
+        <td id="2-3"></td>
+        <td id="2-4"></td>
+      </tr>
+
+      <tr>
+        <td id="3-0" style="background-color: lightgreen">KM 1000/3
+          <br>
+          61282630/001</td>
+
+        <td id="3-1"></td>
+        <td id="3-2"></td>
+        <td id="3-3"></td>
+        <td id="3-4"></td>
+      </tr>
+
+      <tr>
+        <td id="4-0" style="background-color: lightskyblue">ENGEL 1700/4
+          <br>
+          61542722/001</td>
+
+        <td id="4-1"></td>
+        <td id="4-2"></td>
+        <td id="4-3"></td>
+        <td id="4-4"></td>
+      </tr>
+
+      <tr>
+        <td id="5-0" style="background-color: lightgray">ENGEL 1700/5
+          <br>
+          61542721/001</td>
+
+        <td id="5-1"></td>
+        <td id="5-2"></td>
+        <td id="5-3"></td>
+        <td id="5-4"></td>
+      </tr>
+      </tbody>
+    </table>
+
+
+    <input type="button" value="submit"/>
   </div>
-
-  </div>
-</form>
-
+</div>
 </body>
 </html>
 
 <script>
 
-  $(document).ready(function() {
 
-    function sendRequest(field_values){
-      var request = new XMLHttpRequest();
+  var form = $("#1-1").html();
 
-      request.open('POST', 'http://localhost:8080/adapter/productionPlan', false);
-      request.setRequestHeader("Content-Type", "application/json");
-      request.send(field_values);
+  for(i = 1; i <6; i++){
+    for(k = 1; k < 5; k++) {
+      $('#'+i+'-' + k).html(form);
     }
-
-    $('#submit').click(function () {
-
-      var answers = [];
-      $.each($('.readable_value'), function() {
-        answers.push($(this).val());
-      });
-
-      sendRequest(answers.toString());
-
-      $('#Human_form').reset();
-
-    })
-
-
-  })
-
+  }
 </script>
