Working form for production plan form for different browsers.

--- a/human-productionplan/src/main/webapp/productionPlan.html
+++ b/human-productionplan/src/main/webapp/productionPlan.html
@@ -27,7 +27,7 @@
   <h3>Production plan form</h3>
   <div class="well">
 
-    <table class="table table-bordered">
+    <table class="table table-responsive">
 
 
       <thead>
@@ -58,7 +58,7 @@
               <option value="Lexan">Delta 1</option>
               <option value="Default_value" selected>Select type</option>
             </select>
-            Time: <input type="time" class="readable_value" style="height: 20px; width: 80px;">
+            Time: <input type="time" class="readable_value" style="height: 20px; width: 50px;">
           </div>
 
           <div class="dropdown">
@@ -71,7 +71,7 @@
               <option value="Lexan">Delta 1</option>
               <option value="Default_value" selected>Select type</option>
             </select>
-            Time: <input type="time" class="readable_value" style="height: 20px; width: 80px;">
+            Time: <input type="time" class="readable_value" style="height: 20px; width: 50px;">
           </div></td>
 
         <td id="1-2"></td>
