--- a/human-materialcertificate/src/main/webapp/bootstrap/materialcertificateForm.html
+++ b/human-materialcertificate/src/main/webapp/bootstrap/materialcertificateForm.html
@@ -97,15 +97,23 @@
       $.each($('.readable_value'), function() {
         answers.push($(this).val());
       });
-c
+
+      var lables = ["Product type:", "Order number:", "Method field:", "Average:", "Min:", "Max:"];
+
+        document.writeln('Submitted values are:<br>');
+
+      for(n=0; n < lables.length; n++){
+        document.writeln(lables[n]+" "+answers[n]+"<br>");
+      }
+
       sendRequest(answers.toString());
 
+      alert('Refresh page?')
       $('#Human_form').reset();
 
-    })
+    });
 
-
-  })
+  });
 
 </script>
 
