--- a/human-productionplan/src/main/webapp/bootstrap/productionPlan.html
+++ b/human-productionplan/src/main/webapp/bootstrap/productionPlan.html
@@ -127,8 +127,7 @@
       </tbody>
     </table>
 
-    <textarea id="textbox" rows="4" cols="50" placeholder="Write your comments here.">
-    </textarea>
+    <textarea rows="4" cols="175" placeholder="Write your comments here."></textarea>
 
     <br>
     <input type="button" value="submit" id="submit" />
