--- a/human-productionplan/src/main/webapp/bootstrap/productionPlan.html
+++ b/human-productionplan/src/main/webapp/bootstrap/productionPlan.html
@@ -15,7 +15,8 @@
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-</head><!--from  ww w .  ja  v a 2  s . c o m-->
+<!--from  ww w .  ja  v a 2  s . c o m-->
+</head>
 <body>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -25,6 +26,7 @@
 
 <form id="Production_plan_form">
   <h3 style="margin-left: 30px">Production plan form</h3>
+
   <div class="well">
 
     <table class="table table-responsive">
@@ -150,6 +152,7 @@
   function selectedField(select_field){
 
   }
+
 
   $(document).ready(function(){
 
