--- a/human-productionplan/src/main/webapp/bootstrap/productionPlan.html
+++ b/human-productionplan/src/main/webapp/bootstrap/productionPlan.html
@@ -71,20 +71,20 @@
               <option value="Nova Insignia">Nova Insignia</option>
               <option value="Corsa 1">Corsa 1</option>
               <option value="Delta 1">Delta 1</option>
-              <option value="Default_value" selected>Select type</option>
+              <option value="" selected></option>
             </select>
 
-          Time: <!-- <input id="field-two" readonly type="time" class="readable_value" style="height: 20px; width: 80px;"> -->
+            <!-- <input id="field-two" readonly type="time" class="readable_value" style="height: 20px; width: 80px;"> -->
 
-          <select id = shiftTime class="time_value" value="test" onchange="validateField(this)">
+            <select id = shiftTime class="time_value" value="test" onchange="validateField(this)">
             <option class="0" value="07:00">07:00</option>
             <option class="1" value="08:00">08:00</option>
             <option class="2" value="09:00">09:00</option>
-            <option class="3" value=s"10:00">10:00</option>
+            <option class="3" value="10:00">10:00</option>
             <option class="4" value="11:00">11:00</option>
             <option class="5" value="12:00">12:00</option>
             <option class="6" value="13:00">13:00</option>
-            <option class='7' value="default_time" selected>Select time</option>
+            <option class='7' value="" selected></option>
           </select>
         </td>
 
@@ -213,24 +213,23 @@
     $('select.readable_value').click(function(){
       $('.readable_value').attr('value').val('true');
       var verdi = document.getElementsByClassName('readable_value').val();
-      alert(verdi);
     });
 
-    function sendRequest(id, values){
+    function sendRequest(values){
       var request = new XMLHttpRequest();
 
-      request.open('POST', 'http://localhost:8080/adapter/productionPlan', false);
+      request.open('POST', 'http://localhost:8081/adapter/productionPlan', false);
       request.setRequestHeader("Content-Type", "application/json");
-      request.send(id, values);
+      request.send(values);
     }
 
     $('#submit').click(function () {
 
       var parents = $(this).closest('input').attr('id');
-      alert(parents);
 
       var answers = [];
       var values = [];
+      var time_value = [];
       var names = ["KM 1000/1 61282649/001",
         "KM 1000/2 61282634/001",
         "KM 1000/3 61282630/001",
@@ -247,17 +246,21 @@
         values.push($(this).val());
       });
 
+      $.each($('.time_value'), function() {
+
+        time_value.push($(this).val());
+      });
 
       var n = 0;
       for(i = 0; i < 5; i++){
-        var csv = "";
-        for(k = 0; k < 16; k++) {
-          csv+= answers[n++]+",";
-        }
-          sendRequest(values.toString());
-        //sendRequest(names[i]+","+csv);
-      }
+        for(shift = 0; shift < 4; shift++){
 
+          if(!(answers[n] === "Default_value")){
+        sendRequest(names[i]+","+(shift+1)+","+answers[n]+","+values[n]+","+time_value[n]);
+          }
+          n++;
+      }
+      }
         document.getElementById("Production_plan_form").reset();
     })
 
