--- a/human-materialcertificate/src/main/webapp/bootstrap/materialcertificateForm.html
+++ b/human-materialcertificate/src/main/webapp/bootstrap/materialcertificateForm.html
@@ -32,7 +32,8 @@
 
 
       <div class="dropdown">
-        Product type field:
+        Product type:
+        <span style="margin-left: 30px;">
                   <select class="readable_value">
                     <option value="Makrolon">Makrolon</option>
                     <option value="Lexan">Lexan</option>
@@ -47,8 +48,8 @@
       <br>
       <br>
       <div>
-      Method field:
-        <span style="margin-left: 30px;">
+      Method:
+        <span style="margin-left: 60px;">
         <select class="readable_value" style="width: 125px;">
           <option value="ISO 1133">ISO 1133</option>
           <option value="Default_value" selected >Choose field</option>
